- Initialized the EventTarget class