@@ -9,6 +9,7 @@ const DOMString = require('./domstring');
 const HTMLCollection = require('./htmlcollection');
 const Location = require('./location');
 const GlobalEventHandlers = require('./globaleventhandlers');
+const Element = require('./element');
 
 class Document extends Node {
   constructor(window) {
@@ -146,6 +147,22 @@ class Document extends Node {
     this.ontransitionend = g.ontransitionend;
     this.onwaiting = g.onwaiting;
   }
+  /**
+   * Creates a new element
+   * @param  {String}                 tagName The type of element to be created
+   * @param  {ElementCreationOptions} options Used with custom elements
+   * @return {Element}                        The new element
+   */
+  createElement (tagName, options) {
+    // createElement(null) == createElement('null')
+    const string = String(tagName).toLowerCase();
+    const element = new Element(string, this);
+    if (typeof options === 'object' && typeof options.is === 'string') {
+      element.setAttribute('is', options.is);
+    }
+    return element;
+  }
+
   // @TODO
   onafterscriptexecute() {}
   onbeforescriptexecute() {}
@@ -167,7 +184,6 @@ class Document extends Node {
   createCDATASection() {}
   createComment() {}
   createDocumentFragment() {}
-  createElement() {}
   createElementNS() {}
   createEvent() {}
   createNodeIterator() {}
