@@ -1,1 +1,2 @@
-- Initialized the EventTarget class
+- Defined document.createElement
+- Created Element class
